[package]
name = "yew-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.13.0", features = ["yew"] }
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
log = "0.4.21"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["File", "FileReader", "Blob"] }
js-sys = "0.3.69"
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-timers = "0.2"
wasm-bindgen-futures = "0.4.42"
tokio = "1.37.0"
base64 = "0.22.0"
image = "0.25.1"
thiserror = "1.0.59"